--- a/premios-esland/package.json
+++ b/premios-esland/package.json
@@ -11,17 +11,25 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
-    "@astrojs/preact": "^3.4.0",
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.4",
     "@justinribeiro/lite-youtube": "^1.5.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.8.2",
-    "preact": "^10.22.0",
+    "photoswipe": "^5.4.4",
     "prettier-plugin-astro": "^0.13.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-masonry-css": "^1.0.16",
+    "react-responsive-masonry": "^2.2.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/react-responsive-masonry": "^2.1.3",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14"
   }
